--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h1>5000tk</h1>
                 </div>
             </div>
-            <p class="p">Other Amount (Taka)</p>
+            <input class="otherAmount" type="text" placeholder="OtherAmount">
             <hr id="hr">
             <a href="">Donate Now</a>
         </div>
@@ -136,8 +136,8 @@
         </div>
         <div class="infoBox">
             <div>
-                <p id="email">Email</p>
-                <p id="sub">Submission</p>
+                <input id="email" type="email" placeholder="Email">
+                <a id="sub" href="">Subscribe</a>
             </div>
         </div>
     </section>
