--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
         </div>
         <div class="infoBox">
             <div>
-                <input id="email" type="email" placeholder="Email">
-                <a id="sub" href="">Subscribe</a>
+                <form>
+                    <input id="email" type="email" placeholder="Email">
+                    <button id="sub" type="submit">Subscribe</button>
+                </form>
             </div>
         </div>
     </section>
